[package]
name = "huamei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = "0.6"
handlebars = "4.1.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tabled = "0.3.0"
colored = "2.0.0"

[features]
